added sector data

--- a/combinedata.ipynb
+++ b/combinedata.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,28 +69,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Reversion\\ROKU_Size not loaded\n",
+      "Mean Reversion\\DFIHY_Size not loaded\n",
+      "Mean Reversion\\VVV_Size not loaded\n",
       "Mean Reversion\\BHP_Size not loaded\n",
-      "Mean Reversion\\PG_CSV not loaded\n",
-      "Mean Reversion\\PG_Size not loaded\n",
+      "Mean Reversion\\LVMUY_Size not loaded\n",
+      "Mean Reversion\\AJINY_CSV not loaded\n",
+      "Mean Reversion\\AJINY_Size not loaded\n",
+      "Mean Reversion\\VITFF_Size not loaded\n",
       "Mean Reversion\\CAJ_CSV not loaded\n",
       "Mean Reversion\\CAJ_Size not loaded\n",
-      "Mean Reversion\\VVV_Size not loaded\n",
+      "Mean Reversion\\PG_CSV not loaded\n",
+      "Mean Reversion\\PG_Size not loaded\n",
       "Mean Reversion\\APPN_Size not loaded\n",
-      "Mean Reversion\\VITFF_Size not loaded\n",
+      "Mean Reversion\\ROKU_Size not loaded\n",
       "Mean Reversion\\UPS_CSV not loaded\n",
-      "Mean Reversion\\UPS_Size not loaded\n",
-      "Mean Reversion\\LVMUY_Size not loaded\n",
-      "Mean Reversion\\DFIHY_Size not loaded\n",
-      "Mean Reversion\\AJINY_CSV not loaded\n",
-      "Mean Reversion\\AJINY_Size not loaded\n"
+      "Mean Reversion\\UPS_Size not loaded\n"
      ]
     }
    ],
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# adding sector classification\n",
+    "sector_columns = {'Unnamed: 0':'Ticker', 'Sector':'Sector', 'Sector Index':'Sector Index'}\n",
+    "sector_data = sector_data.rename(sector_columns, axis=1)\n",
+    "sector_data.index = sector_data['Ticker']\n",
+    "\n",
+    "for stock in stocks:\n",
+    "    merged_dict[stock]['Sector Index'] = sector_data['Sector Index'].loc[stock]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +237,7 @@
    "source": [
     "# generating csv and storing them in \\merged_data\n",
     "for stock in stocks:\n",
-    "    dict[stock].to_csv('merged_data\\\\' + stock + 'data.csv')\n",
+    "    merged_dict[stock].to_csv('merged_data\\\\' + stock + 'data.csv')\n",
     "print('csvs generated')"
    ]
   }
